Índice mal escrito

--- a/pages/BlackOps.html
+++ b/pages/BlackOps.html
@@ -9,8 +9,7 @@
     <center>
   <div id="container">
   			<div class="celda1"><h1>Call Of Duty Black Ops</h1>
-                            <a href="../Index.html">ÍNDICE></div>
-                            
+                            <p1><a href="../Index.html">ÍNDICE</p1></div>
   			<div class="celda2"><img src="../img/bo1/ak74ubo1.png"></a></div>
         <div class="celda3">Como número 3, tenemos al subfusil AK74u, conocido por ser un arma rápida, eficaz y capaz de resistir muchas rondas sin necesidad de mejoras.
         </div>
